# rusttalk

./: Cargo.toml  makefile  notes
demo/lunch/: Cargo.toml
demo/lunch/src/: lib.rs
docker/: Dockerfile
examples/: Cargo.toml
examples/src/: lib.rs
slides/: README.md  all.sh  build.sh  discarded.md  loop  run_server.sh  slides.md  slides_cygni_tech_talk.md  slides_cygni_workshop_just_for_formatting.md  slides_cygni_workshop_talents.md
slides/css/: rust.css
slides/img/: debian-fastest-time.svgz
slides/js/: editor.js
src/: fmtbug.rs  lib.rs  main.rs  pcons.rs  test.rs
